...
        android:label="@string/elevenlabs_speech_settings_title" />
    <fragment
        android:id="@+id/groqSpeechSettingsFragment"
        android:name="wtf.uhoh.newsoftkeyboard.app.ui.settings.GroqSpeechSettingsFragment"
        android:label="@string/groq_speech_settings_title" />
    <fragment
        android:id="@+id/userInterfaceSettingsFragment"
        android:name="wtf.uhoh.newsoftkeyboard.app.ui.settings.UserInterfaceSettingsFragment"
        android:label="UserInterfaceSettingsFragment" >
        <action
            android:id="@+id/action_userInterfaceSettingsFragment_to_keyboardThemeSelectorFragment"
            app:destination="@id/keyboardThemeSelectorFragment"
            app:enterAnim="@anim/slide_in_right"
...
    <fragment
        android:id="@+id/customKeyboardsFragment"
        android:name="wtf.uhoh.newsoftkeyboard.app.ui.settings.CustomKeyboardsFragment"
        android:label="@string/custom_keyboards_title">
        <action
            android:id="@+id/action_customKeyboardsFragment_to_customKeyboardEditorFragment"
            app:destination="@id/customKeyboardEditorFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
...
