<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:paddingTop="@dimen/global_content_padding_bottom"
    android:paddingBottom="@dimen/global_content_padding_bottom"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:id="@+id/settings_root"
        style="@style/Nsk.SettingsRootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <net.evendanan.pixel.SettingsTileView
            android:id="@+id/settings_tile_keyboards"
            style="@style/Nsk.SettingsTileLayout"
            app:tileImage="@drawable/ic_language_root_keyboards"
            app:tileLabel="@string/language_keyboards_settings_tile" />

        <net.evendanan.pixel.SettingsTileView
            android:id="@+id/settings_tile_grammar"
            style="@style/Nsk.SettingsTileLayout"
            app:tileImage="@drawable/ic_language_root_grammar"
            app:tileLabel="@string/language_grammar_settings_tile" />

        <net.evendanan.pixel.SettingsTileView
            android:id="@+id/settings_tile_even_more"
            style="@style/Nsk.SettingsTileLayout"
            app:tileImage="@drawable/ic_language_root_tweaks"
            app:tileLabel="@string/language_tweaks_settings_tile" />
    </LinearLayout>
</ScrollView>
